tests/fixtures/errors/string_on_string.z
main: function is {
    n: 7
    s: "value \{n}"
    t: s.string
    print "\{t}"
}
